[gd_scene load_steps=8 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_6oykm"]
[ext_resource type="Script" path="res://scripts/LineEditReset.gd" id="2_0ym8f"]
[ext_resource type="Theme" uid="uid://d18y4voshb0um" path="res://Resources/Menu Theme.tres" id="3_5cu1w"]
[ext_resource type="Script" path="res://scripts/gizmo.gd" id="4_7g88q"]
[ext_resource type="Texture2D" uid="uid://c5fl4pf7cxwvc" path="res://Assets/gizmo.png" id="5_lmu52"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbb78"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="Main" type="Control" node_paths=PackedStringArray("ObjectsRoot", "MenusRoot", "gizmo")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oykm")
ObjectsRoot = NodePath("ObjectsRoot")
MenusRoot = NodePath("Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/PanelContainer/MenusRoot")
gizmo = NodePath("Menu/Gizmo")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="ObjectsRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 191.0
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_qbb78")

[node name="MainMenu" type="VBoxContainer" parent="Menu/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleEdit" type="LineEdit" parent="Menu/PanelContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "[Profile Name]"
alignment = 1
caret_blink = true
script = ExtResource("2_0ym8f")

[node name="DeviceDropdown" type="MenuButton" parent="Menu/PanelContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Input Device"
flat = false
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="HBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu"]
custom_minimum_size = Vector2(115.075, 0)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5cu1w")
text = "Threshold"

[node name="VolumeVisual" type="ProgressBar" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 12.49)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
show_percentage = false

[node name="ThresholdSlider" type="HSlider" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5cu1w")
text = "Loudness"

[node name="VBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/MainMenu/HBoxContainer"]
layout_mode = 2

[node name="InputGainSlider" type="HSlider" parent="Menu/PanelContainer/MainMenu/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_horizontal = 3
max_value = 24.0
step = 0.1

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/PanelContainer/MainMenu"]
custom_minimum_size = Vector2(0, 130.82)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.555)
layout_mode = 2
tooltip_text = "Create a new screen object"
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenusRoot" type="VBoxContainer" parent="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
theme = ExtResource("3_5cu1w")
text = "Press any key to open this menu again"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Settings" type="Button" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
text = "System Settings"

[node name="HideMenuButton" type="Button" parent="Menu/PanelContainer/MainMenu"]
layout_mode = 2
text = "Hide Menu"

[node name="SettingsMenu" type="VBoxContainer" parent="Menu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Main Menu" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
text = "Back"

[node name="Fullscreen" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
text = "Fullscreen"

[node name="Save Data" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
text = "Save Data"

[node name="Load Data" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
text = "Load Data"

[node name="Autosave" type="Panel" parent="Menu/PanelContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/Autosave"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/Autosave/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Autosave every 30 seconds"
mouse_filter = 1
text = "Autosave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AutosaveToggle" type="CheckBox" parent="Menu/PanelContainer/SettingsMenu/Autosave/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.22
tooltip_text = "Autosave every 30 seconds"
theme = ExtResource("3_5cu1w")
alignment = 1
icon_alignment = 1

[node name="Transparent BG" type="Panel" parent="Menu/PanelContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/Transparent BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/Transparent BG/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Transparent BG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGTransparentToggle" type="CheckBox" parent="Menu/PanelContainer/SettingsMenu/Transparent BG/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.22
theme = ExtResource("3_5cu1w")
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="BackgroundColor" type="Panel" parent="Menu/PanelContainer/SettingsMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/SettingsMenu/BackgroundColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/SettingsMenu/BackgroundColor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BG Color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Menu/PanelContainer/SettingsMenu/BackgroundColor/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.52
color = Color(0, 1, 0, 1)

[node name="QuitButton" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
size_flags_vertical = 8
text = "Quit"

[node name="QuitWithoutSavingButton" type="Button" parent="Menu/PanelContainer/SettingsMenu"]
layout_mode = 2
size_flags_vertical = 8
text = "Quit Without Saving"

[node name="Gizmo" type="Control" parent="Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_7g88q")

[node name="Button" type="TextureButton" parent="Menu/Gizmo"]
layout_mode = 0
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
texture_normal = ExtResource("5_lmu52")

[node name="ImageOpenDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(682, 589)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.bmp, *.dds, *.ktx, *.exr, *.hdr, *.tga, *.svg, *.webp")
show_hidden_files = true
use_native_dialog = true

[node name="JSONSaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
access = 2
filters = PackedStringArray("*.json")
show_hidden_files = true
use_native_dialog = true

[node name="JSONLoadDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(312, 154)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
show_hidden_files = true
use_native_dialog = true

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="text_submitted" from="Menu/PanelContainer/MainMenu/TitleEdit" to="." method="_set_profile_name"]
[connection signal="value_changed" from="Menu/PanelContainer/MainMenu/HBoxContainer/ThresholdSlider" to="." method="_on_v_slider_drag_ended"]
[connection signal="value_changed" from="Menu/PanelContainer/MainMenu/HBoxContainer/VBoxContainer/InputGainSlider" to="." method="_on_input_gain_change"]
[connection signal="pressed" from="Menu/PanelContainer/MainMenu/ScrollContainer/VBoxContainer/Button" to="." method="_create_new_object"]
[connection signal="pressed" from="Menu/PanelContainer/MainMenu/Settings" to="." method="_open_settings"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/Main Menu" to="." method="_close_settings"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/Fullscreen" to="." method="_on_fullscreen_toggle"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/Save Data" to="." method="_on_save_button"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/Load Data" to="." method="_load_dialog"]
[connection signal="toggled" from="Menu/PanelContainer/SettingsMenu/Autosave/HBoxContainer/AutosaveToggle" to="." method="_toggle_autosave"]
[connection signal="toggled" from="Menu/PanelContainer/SettingsMenu/Transparent BG/HBoxContainer/BGTransparentToggle" to="." method="_toggle_transparent"]
[connection signal="color_changed" from="Menu/PanelContainer/SettingsMenu/BackgroundColor/HBoxContainer/ColorPickerButton" to="." method="_change_background_color"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="pressed" from="Menu/PanelContainer/SettingsMenu/QuitWithoutSavingButton" to="." method="_on_quit_without_saving_button_pressed"]
[connection signal="button_down" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="drag"]
[connection signal="button_up" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="dragnt"]
[connection signal="file_selected" from="ImageOpenDialog" to="." method="_request_image"]
[connection signal="file_selected" from="JSONSaveDialog" to="." method="_save_file"]
[connection signal="file_selected" from="JSONLoadDialog" to="." method="_load_data"]
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_autosave_timer_timeout"]
